--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </div>
             <p id="txtCopiado">Copiado!</p>
         </section>
+        <--Teste-->
     </main>
     <script src="assets/js/geraSenhas.js"></script>
     <script src="assets/js/converterString.js"></script>
